--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -35,11 +35,11 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="OpenTK, Version=3.0.1.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenTK.3.0.1\lib\net20\OpenTK.dll</HintPath>
+    <Reference Include="OpenTK, Version=3.2.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <HintPath>..\packages\OpenTK.3.2\lib\net20\OpenTK.dll</HintPath>
     </Reference>
-    <Reference Include="OpenTK.GLControl, Version=3.0.1.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenTK.GLControl.3.0.1\lib\net20\OpenTK.GLControl.dll</HintPath>
+    <Reference Include="OpenTK.GLControl, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <HintPath>..\packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -66,6 +66,12 @@
     </Compile>
     <Compile Include="Controls\TestControls.designer.cs">
       <DependentUpon>TestControls.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrameBuffer\TestFrameBuffer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrameBuffer\TestFrameBuffer.designer.cs">
+      <DependentUpon>TestFrameBuffer.cs</DependentUpon>
     </Compile>
     <Compile Include="Galaxy\GalMapRegions.cs" />
     <Compile Include="Galaxy\GalMap\GalacticMapObject.cs" />
@@ -230,6 +236,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\TestControls.resx">
       <DependentUpon>TestControls.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrameBuffer\TestFrameBuffer.resx">
+      <DependentUpon>TestFrameBuffer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GalaxyDemo\TestDynamicGrid.resx">
       <DependentUpon>TestDynamicGrid.cs</DependentUpon>
