--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -55,6 +55,7 @@
     <Compile Include="GL4\BasicTypes\GLFrameBuffer.cs" />
     <Compile Include="GL4\BasicTypes\GLLayoutStandards.cs" />
     <Compile Include="GL4\BasicTypes\GLBuffer.cs" />
+    <Compile Include="GL4\BasicTypes\GLScissors.cs" />
     <Compile Include="GL4\Controls\ControlNumberBox.cs" />
     <Compile Include="GL4\Controls\ControlToolTip.cs" />
     <Compile Include="GL4\Controls\FormMessageBox.cs" />
