--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -123,6 +123,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stencil\TestStencil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Stencil\TestStencil.designer.cs">
+      <DependentUpon>TestStencil.cs</DependentUpon>
+    </Compile>
     <Compile Include="TestMain2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -268,6 +274,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Stencil\TestStencil.resx">
+      <DependentUpon>TestStencil.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TestMain2.resx">
       <DependentUpon>TestMain2.cs</DependentUpon>
     </EmbeddedResource>
