--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -59,6 +59,7 @@
     <Compile Include="GL4\BasicTypes\GLStencil.cs" />
     <Compile Include="GL4\BasicTypes\GLScissors.cs" />
     <Compile Include="GL4\Controls\ControlNumberBox.cs" />
+    <Compile Include="GL4\Controls\ControlTextBoxAutoComplete.cs" />
     <Compile Include="GL4\Controls\ControlToolTip.cs" />
     <Compile Include="GL4\Controls\FormMessageBox.cs" />
     <Compile Include="GL4\Controls\FormConfigurable.cs" />
