Add labels to stars
Fix mat4 functions
Add Functions test harness to allow for development and testing of functions
Fix for viewport finding stuff in Galaxy
Establish and document matrix row major order and demo
GLBitmaps enhanced to handle any number of bitmaps and add/remove dynamically
GLBitmaps can accept a bitmap, owned or not, or draw text
Shader Vertex with matrix translation fixed so the pointing to the viewer works properly
Factory tape and path can cope with 0,1 or many star points without crashing

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -96,8 +96,9 @@
     <Compile Include="GL4\Shaders\PointSprites\ShaderPointSprites.cs" />
     <Compile Include="GL4\Shaders\Stars\ShaderStarSurface.cs" />
     <Compile Include="GL4\ShapeFactory\FactoryCylinder.cs" />
-    <Compile Include="GL4\TextRendering\TextRenderer.cs" />
+    <Compile Include="GL4\BitMaps\GLBitmaps.cs" />
     <Compile Include="GL4\WavefrontObj\GLWavefrontObjRenderCreator.cs" />
+    <Compile Include="GL\GLMatrix4Statics.cs" />
     <Compile Include="Models\WaveFrontObj\GLWavefrontObj.cs" />
     <Compile Include="Models\WaveFrontObj\GLWavefrontObjReader.cs" />
     <Compile Include="GL4\Textures\BindlessTextureBlock.cs" />
