Changed to generation for bitmaps cache

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -171,11 +171,11 @@
     <Compile Include="Stars\ShaderTestStarPointsDiscs.Designer.cs">
       <DependentUpon>ShaderTestStarPointsDiscs.cs</DependentUpon>
     </Compile>
-    <Compile Include="TextRenderer\TestTextRenderer.cs">
+    <Compile Include="BitMaps\TestBitmaps.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TextRenderer\TestTextRenderer.designer.cs">
-      <DependentUpon>TestTextRenderer.cs</DependentUpon>
+    <Compile Include="BitMaps\TestBitmaps.designer.cs">
+      <DependentUpon>TestBitmaps.cs</DependentUpon>
     </Compile>
     <Compile Include="Textures\ShaderTestBlendedShaderMultImages.cs">
       <SubType>Form</SubType>
@@ -321,8 +321,8 @@
     <EmbeddedResource Include="Stars\ShaderTestStarPointsDiscs.resx">
       <DependentUpon>ShaderTestStarPointsDiscs.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TextRenderer\TestTextRenderer.resx">
-      <DependentUpon>TestTextRenderer.cs</DependentUpon>
+    <EmbeddedResource Include="BitMaps\TestBitmaps.resx">
+      <DependentUpon>TestBitmaps.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Textures\ShaderTestBlendedShaderMultImages.resx">
       <DependentUpon>ShaderTestBlendedShaderMultImages.cs</DependentUpon>
