Calendar now working with picker

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseUtils\DateObjectExtensions.cs" />
     <Compile Include="BaseUtils\FileHelpers.cs" />
     <Compile Include="BaseUtils\StringObjectExtensionsLists.cs" />
     <Compile Include="BaseUtils\Timers.cs" />
