--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -60,6 +60,7 @@
     <Compile Include="GL4\BasicTypes\GLMemoryBarrier.cs" />
     <Compile Include="GL4\BasicTypes\GLStencil.cs" />
     <Compile Include="GL4\BasicTypes\GLScissors.cs" />
+    <Compile Include="GL4\Controls\ControlAnimation.cs" />
     <Compile Include="GL4\Controls\ControlBaseCheckBox.cs" />
     <Compile Include="GL4\Controls\ControlCalendar.cs" />
     <Compile Include="GL4\Controls\ControlMenuItem.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="GL4\Buffers\GLMatrixBufferWithGenerations.cs" />
     <Compile Include="GL4\Controls\ControlMenuStrip.cs" />
     <Compile Include="GL4\Controls\ControlNumberBox.cs" />
+    <Compile Include="GL4\Controls\ControlStructsEnums.cs" />
     <Compile Include="GL4\Controls\ControlTextBoxAutoComplete.cs" />
     <Compile Include="GL4\Controls\ControlToolTip.cs" />
     <Compile Include="GL4\Controls\FormMessageBox.cs" />
