Added MatrixString, updated functions, sorting out again look at

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -111,6 +111,7 @@
     <Compile Include="GL4\ShapeFactory\FactoryCylinder.cs" />
     <Compile Include="GL4\BitMaps\GLBitmaps.cs" />
     <Compile Include="GL4\WavefrontObj\GLWavefrontObjRenderCreator.cs" />
+    <Compile Include="GL\GLMatrixString.cs" />
     <Compile Include="GL\GLMatrix4Statics.cs" />
     <Compile Include="Models\WaveFrontObj\GLWavefrontObj.cs" />
     <Compile Include="Models\WaveFrontObj\GLWavefrontObjReader.cs" />
