--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Controls\TestControlsMenu.designer.cs">
       <DependentUpon>TestControlsMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Galaxy\GalaxyStars.cs" />
+    <Compile Include="Galaxy\GalaxyStarsGetFromDB.cs" />
     <Compile Include="Stars\GLBitmapsWithStarObjects.cs" />
     <Compile Include="Classes.cs" />
     <Compile Include="Functions\TestFunctions.cs">
