Add GLObjectsWithlabels, stage1

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -219,7 +219,7 @@
     <Compile Include="Uniformblocks\ShaderTestUniforms.Designer.cs">
       <DependentUpon>ShaderTestUniforms.cs</DependentUpon>
     </Compile>
-    <Compile Include="VertexBufferIndirect\StarsLabels.cs" />
+    <Compile Include="VertexBufferIndirect\ObjectsWithLabels.cs" />
     <Compile Include="VertexBufferIndirect\TestVertexBufferIndirect.cs">
       <SubType>Form</SubType>
     </Compile>
