Add Set of GLOWL

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -61,6 +61,7 @@
     <Compile Include="GL4\BasicTypes\GLMemoryBarrier.cs" />
     <Compile Include="GL4\BasicTypes\GLStencil.cs" />
     <Compile Include="GL4\BasicTypes\GLScissors.cs" />
+    <Compile Include="GL4\Buffers\GLSetOfObjectsWithLabels.cs" />
     <Compile Include="GL4\Buffers\GLVertexBufferIndirect.cs" />
     <Compile Include="GL4\Buffers\GLObjectsWithLabels.cs" />
     <Compile Include="GL4\Controls\ControlAnimation.cs" />
