--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -101,10 +101,11 @@
     <Compile Include="GL4\Controls\ControlDisplay.cs" />
     <Compile Include="GL4\Controls\Control.cs" />
     <Compile Include="GL4\Controls\ControlTabStyleCustom.cs" />
-    <Compile Include="GL4\Renderers\RenderableItemOperations.cs" />
-    <Compile Include="GL4\Renderers\RenderableItemNull.cs" />
-    <Compile Include="GL4\Shaders\Base\ShaderOperations.cs" />
-    <Compile Include="GL4\Shaders\Base\ShaderNull.cs" />
+    <Compile Include="GL4\Operations\OperationsConditional.cs" />
+    <Compile Include="GL4\Operations\OperationsQuery.cs" />
+    <Compile Include="GL4\Operations\OperationsStencil.cs" />
+    <Compile Include="GL4\Operations\OperationsBasic.cs" />
+    <Compile Include="GL4\Operations\Operations.cs" />
     <Compile Include="GL4\Shaders\Basic Shaders\ShadersTesselationSinewaveInstanced.cs" />
     <Compile Include="GL4\Shaders\Find\ShaderFindGeoTriangles.cs" />
     <Compile Include="GL4\Shaders\PipelineShaders\ShadersTesselationEvaluateSinewave.cs" />
