--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -242,6 +242,12 @@
     <Compile Include="Textures\ShaderTestGalaxyTexture.designer.cs">
       <DependentUpon>ShaderTestGalaxyTexture.cs</DependentUpon>
     </Compile>
+    <Compile Include="TransformFeedback\TestTransformFeedback.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TransformFeedback\TestTransformFeedback.designer.cs">
+      <DependentUpon>TestTransformFeedback.cs</DependentUpon>
+    </Compile>
     <Compile Include="Uniformblocks\ShaderTestUniforms.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -412,6 +418,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Textures\ShaderTestGalaxyTexture.resx">
       <DependentUpon>ShaderTestGalaxyTexture.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TransformFeedback\TestTransformFeedback.resx">
+      <DependentUpon>TestTransformFeedback.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Uniformblocks\ShaderTestUniforms.resx">
       <DependentUpon>ShaderTestUniforms.cs</DependentUpon>
