--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -55,6 +55,7 @@
     <Compile Include="BaseUtils\StringObjectExtensionsLists.cs" />
     <Compile Include="BaseUtils\Timers.cs" />
     <Compile Include="Controller3D\KeyboardState.cs" />
+    <Compile Include="GL4\BasicTypes\GLRenderBuffer.cs" />
     <Compile Include="GL4\BasicTypes\GLFrameBuffer.cs" />
     <Compile Include="GL4\BasicTypes\GLLayoutStandards.cs" />
     <Compile Include="GL4\BasicTypes\GLBuffer.cs" />
