--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -222,6 +222,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GL4\Shaders\Base\PlanShaders.txt" />
+    <Content Include="Readme.txt" />
     <None Include="Resources\Up.png" />
     <None Include="Resources\Right.png" />
     <None Include="Resources\Left.png" />
