--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -506,7 +506,7 @@
   <ItemGroup>
     <ProjectReference Include="..\OFC\OFC.csproj">
       <Project>{4cfa37d5-4182-4cae-afc3-7563a13b44ee}</Project>
-      <Name>OpenTKUtils</Name>
+      <Name>OFC</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
